GNOME Bugzilla – Bug 605138
gedit assert failure: GtkSourceView:ERROR:gtksourcecontextengine.c:2406:gtk_source_context_engine_finalize: assertion failed: (!ce->priv->first_update)
Last modified: 2013-10-12 13:26:03 UTC
this report has been filed here: https://bugs.edge.launchpad.net/ubuntu/+source/gtksourceview2/+bug/498538 "crash after closing a big file" ".
+ Trace 219718
Thread 1 (process 6166)
Fixed: https://git.gnome.org/browse/gtksourceview/commit/?id=2e2e4b9